Fix sizing of the Share button on smaller screens

--- a/assets/css/_recording_show.scss
+++ b/assets/css/_recording_show.scss
@@ -25,8 +25,12 @@
     }
 
     .actions {
-      .btn {
+      .btn-group > div {
         margin-left: 1rem;
+
+        &:first-child {
+          margin-left: 0;
+        }
       }
     }
   }
